ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ecom

spec:
  ingressClassName: nginx
  rules:
    - host: vanshika-ecommerce.upes-int-devops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce
                port:
                  number: 80
